Actualizat SEO și meta taguri pentru Google Search Console

--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Site ProX Clean>
-
-        <title>ProX Clean</title>
+    <meta name="google-site-verification" content="96lM5tVH9gU_88e30fnui0cq9C_zh56uUHjDqFrQ6tA" />
+     <title>ProX Clean – Servicii Profesionale de Curățenie</title>
 
         <link rel="stylesheet" href="styles.css">
 
         <style>
              * {
       margin: 0;
-      padding: 0;
+      padding: 0;+!!+``
       box-sizing: border-box;
     }
     body {
@@ -697,6 +696,7 @@
     </div>
   </header>
 
+  <meta name="description" content="ProX Clean oferă servicii profesionale de curățenie pentru locuințe și firme. Calitate, seriozitate și prețuri competitive. Contactează-ne acum!">
   <!-- SECTIUNEA FEATURED -->
   <section class="featured">
     <div class="featured-content">
