--- a/index.html
+++ b/index.html
@@ -362,8 +362,8 @@
     cursor: pointer;
     transition: transform 0.3s ease;
     width: 200px; /* Dimensiunea butonului */
-    margin-top: 70px;
-    margin-right: 230px;
+    margin-top: 200px;
+    margin-right: 0px;
 }
 
     .selector-content button:hover {
@@ -696,7 +696,6 @@
     </div>
   </header>
 
-  <meta name="description" content="ProX Clean oferă servicii profesionale de curățenie pentru locuințe și firme. Calitate, seriozitate și prețuri competitive. Contactează-ne acum!">
   <!-- SECTIUNEA FEATURED -->
   <section class="featured">
     <div class="featured-content">
@@ -750,7 +749,7 @@
         - Curățarea oricărui element tapițat<br>
         - Redarea culorilor
       </p>
-      <button type="button" onclick="location.href='http://127.0.0.1:5500/servicii.html'">
+      <button type="button" onclick="location.href='https://create-webdesign.github.io/ProX-Clean/servicii.html'">
         Vezi toate serviciile noastre
       </button>
     </div>
