--- a/servicii.html
+++ b/servicii.html
@@ -898,7 +898,7 @@ body {
         <p> Perne si mobilier textil <br> 
             Curatare mochete si podele de trafic intens</p>
                  
-    <button type="button" onclick="location.href='http://127.0.0.1:5500/Contact.html'">Programeaza</button>
+    <button type="button" onclick="location.href='https://create-webdesign.github.io/ProX-Clean/Contact.html'">Programeaza</button>
     </figure>
     
  </section>
@@ -909,7 +909,7 @@ body {
         <img src="images/man-doing-professional-home-cleaning-service.jpg">
         <h3>Curatare Canapea Textil</h3>
         <pre><p>Curatare tapiterii <br>scaune,banchete,canapele, mochete si podele</p></pre>
-        <button type="button" onclick="location.href='http://127.0.0.1:5500/Contact.html'">Programeaza</button>
+        <button type="button" onclick="https://create-webdesign.github.io/ProX-Clean/Contact.html'">Programeaza</button>
     </main>
 
  </section>
@@ -920,7 +920,7 @@ body {
         <img src="images/PHOTO-2025-06-13-13-09-21.jpg">
         <h4>Curatare Mochete</h4>
        <pre><p>Gresie,vitrine si geamuri mari <br>Mobilier textil</p></pre>
-        <button type="button" onclick="location.href='http://127.0.0.1:5500/Contact.html'">Programeaza</button>
+        <button type="button" onclick="https://create-webdesign.github.io/ProX-Clean/Contact.html">Programeaza</button>
     </selector>
 
  </section>
@@ -929,7 +929,7 @@ body {
     <img src="images/professional-cleaning-service-person-using-vacuum-cleaner-office.jpg">
     <h5>Curatare Suprafete Comune</h5>
     <pre><p>Igienizare scaune birou <br>Curatare holuri si receptii<br></p></pre>
-    <button type="button" onclick="location.href='http://127.0.0.1:5500/Contact.html'">Programeza</button>
+    <button type="button" onclick="location.href='https://create-webdesign.github.io/ProX-Clean/Contact.html">Programeza</button>
 
  </section>
 
