Adăugat noile modificări în site

--- a/servicii.html
+++ b/servicii.html
@@ -197,7 +197,7 @@ color: #C89C3F;
 
 .logo {
   position: absolute;
-  top: 3px;
+  top: 2px;
   left: 0px;
   width: 70px;
   height: auto;
@@ -695,7 +695,7 @@ body {
     position: relative;
     z-index: 1500;
     background-color: #C89C3F !important;
-    padding-top: 30px !important;
+    padding-top: 10px !important;
     position: relative;
     z-index: 1500;
   }
@@ -711,9 +711,9 @@ body {
     right: 10px;
     z-index: 2000;
     cursor: pointer;
-    font-size: 1.8rem;
+    font-size: 1.9rem;
     display: block;
-    margin-top: -20px;
+    margin-top: -45px;
   }
 
   .navbar {
@@ -811,7 +811,7 @@ body {
   /* LOGO */
   .logo {
     margin-bottom: 10px;
-    margin-top: -30px;
+    margin-top: -50px;
   }
 
   /* FOOTER & ICONS */
@@ -913,7 +913,7 @@ body {
         <img src="images/man-doing-professional-home-cleaning-service.jpg">
         <h3>Curatare Canapea Textil</h3>
         <pre><p>Curatare tapiterii <br>scaune,banchete,canapele, mochete si podele</p></pre>
-        <button type="button" onclick="https://create-webdesign.github.io/ProX-Clean/Contact.html'">Programeaza</button>
+        <button type="button" onclick="location.href='https://create-webdesign.github.io/ProX-Clean/Contact.html'">Programeaza</button>
     </main>
 
  </section>
@@ -924,7 +924,7 @@ body {
         <img src="images/PHOTO-2025-06-13-13-09-21.jpg">
         <h4>Curatare Mochete</h4>
        <pre><p>Gresie,vitrine si geamuri mari <br>Mobilier textil</p></pre>
-        <button type="button" onclick="https://create-webdesign.github.io/ProX-Clean/Contact.html">Programeaza</button>
+        <button type="button" onclick="location.href='https://create-webdesign.github.io/ProX-Clean/Contact.html'">Programeaza</button>
     </selector>
 
  </section>
@@ -933,7 +933,7 @@ body {
     <img src="images/professional-cleaning-service-person-using-vacuum-cleaner-office.jpg">
     <h5>Curatare Suprafete Comune</h5>
     <pre><p>Igienizare scaune birou <br>Curatare holuri si receptii<br></p></pre>
-    <button type="button" onclick="location.href='https://create-webdesign.github.io/ProX-Clean/Contact.html">Programeza</button>
+    <button type="button" onclick="location.href='https://create-webdesign.github.io/ProX-Clean/Contact.html'">Programeza</button>
 
  </section>
 
